social preview image link added

--- a/client/index.html
+++ b/client/index.html
@@ -16,12 +16,12 @@
     <meta property="og:title" content="Virtual Carthusian Rosary with 50 Mysteries" />
     <meta property="og:description" content="A contemplative virtual rosary with 50 scriptural mysteries in the Carthusian tradition." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://replit.com/public/images/opengraph.png" />
+    <meta property="og:image" content="https://rosary50.com/r50preview.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@replit" />
     <meta name="twitter:title" content="Virtual Carthusian Rosary with 50 Mysteries" />
     <meta name="twitter:description" content="A contemplative virtual rosary with 50 scriptural mysteries in the Carthusian tradition." />
-    <meta name="twitter:image" content="https://replit.com/public/images/opengraph.png" />
+    <meta name="twitter:image" content="https://rosary50.com/r50preview.png" />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
